<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/personalInputLayout"
        android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
...

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/fullNameEditText"
                android:background="@color/defaultTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_section"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textSecondary"
            app:boxStrokeColor="@color/textTertiary"
...

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:textSize="18sp"
                android:id="@+id/dobEditText"
                android:background="@color/defaultTheme"
                android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <Button
            style="@style/ButtonStyle"
            android:text="@string/button_cancel_text"
            android:id="@+id/inputCancelButton"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/button_cancel_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/inputNextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            style="@style/ButtonStyle"
            android:text="@string/button_next_text"
...
