<resources>
    <string name="app_name">assignment3</string>

    <!-- Title string for activity and fragments-->
    <string name="main_activity_title">Contact Details</string>
    <string name="detail_activity_title">Profile Detail</string>
    <string name="input_activity_title_add">Add new profile</string>
    <string name="input_activity_title_modify">Modify current profile</string>

    <!-- String for main activity -->
    <string name="main_activity_all_filter">All</string>
    <string name="main_activity_floating_button_text">Add</string>
    <string name="card_title_default">Viet Hoang Pham</string>
    <string name="card_dob_default">10/10/2010</string>
    <string name="card_detail_content_description">Detail</string>
    <string name="card_delete_content_description">Delete</string>

    <!-- String for detail & input activity -->
    <string name="full_name_section">Full Name <font color="#FF0000">*</font></string>
    <string name="gender_section">Gender</string>
    <string name="date_of_birth_section">Date Of Birth <font color="#FF0000">*</font></string>
    <string name="date_of_birth_section_with_no_asterisk">Date Of Birth</string>
    <string name="mobile_phone_section">Mobile Phone <font color="#FF0000">*</font></string>
    <string name="mobile_phone_section_with_no_asterisk">Mobile Phone</string>
    <string name="home_address_section">Home Address</string>
    <string name="suburb_section">Suburb</string>
    <string name="gender_example">Male</string>
    <string name="date_of_birth_example">10/10/2000</string>
    <string name="mobile_phone_example">0412 345 678</string>
    <string name="home_address_example">10 Example Address</string>
    <string name="suburb_example">Dandenong</string>
    <string name="first_progress_title">Personal</string>
    <string name="second_progress_title">Contact</string>

    <!-- String for input field helper text -->
    <string name="full_name_helper">Maximum 20 characters</string>
    <string name="gender_helper">Maximum 10 characters</string>
    <string name="date_of_birth_helper">dd/mm/yyyy format</string>
    <string name="phone_helper">e.g. 0412 345 678</string>
    <string name="home_address_helper">Maximum 25 characters</string>
    <string name="suburb_address_helper">Maximum 15 characters</string>

    <!-- String for input error text -->
    <string name="full_name_empty">Full name is required</string>
    <string name="dob_empty">Date of birth is required</string>
    <string name="dob_invalid">Date of birth is in invalid format</string>
    <string name="phone_empty">Phone number is required</string>
    <string name="phone_invalid">Phone number is in invalid format</string>

    <!-- String for buttons -->
    <string name="button_return_text">Return</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_next_text">Next</string>
    <string name="button_save_text">Save</string>
    <string name="button_modify_text">Modify</string>

    <!-- Extra String -->
    <string name="family_label">Family</string>
    <string name="friend_label">Friend</string>
    <string name="divider">|</string>

</resources>