<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemLayout"
        android:background="@color/defaultTheme"
        >

    <com.google.android.material.card.MaterialCardView
            android:layout_width="320dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/textPrimary"
            app:strokeColor="@color/backgroundPrimary"
            app:strokeWidth="2dp"
            tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cardLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cardContentLayout"
                    app:layout_constraintEnd_toStartOf="@+id/cardButtonLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="48dp">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardLabelLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@color/backgroundSecondary">

                    <TextView
                            android:text="@string/family_label"
                            android:contentDescription="@string/family_label"
                            style="@style/NormalChipStyle"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cardLabel"
                            android:gravity="center"
                            android:paddingVertical="6dp"
                            tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                        style="@style/CardTitleStyle"
                        android:text="@string/card_title_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardTitle"
                        app:layout_constraintBottom_toTopOf="@+id/cardDob"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/cardLabelLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp" />

                <TextView
                        style="@style/CardContentStyle"
                        android:text="@string/card_dob_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardDob"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardTitle"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintStart_toStartOf="@+id/cardTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:id="@+id/cardButtonLayout"
                    app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.button.MaterialButton
                        android:background="@drawable/card_detail_button"
                        android:contentDescription="@string/card_detail_content_description"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:id="@+id/detailButton"
                        app:layout_constraintHeight_percent="0.5"
                        app:backgroundTint="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                        android:background="@drawable/card_delete_button"
                        android:contentDescription="@string/card_delete_content_description"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:id="@+id/deleteButton"
                        app:layout_constraintHeight_percent="0.5"
                        app:backgroundTint="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        app:srcCompat="@drawable/info_icon"
                        android:id="@+id/infoIcon"
                        tools:ignore="ContentDescription"
                        app:layout_constraintBottom_toBottomOf="@+id/detailButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/detailButton" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        app:srcCompat="@drawable/delete_icon"
                        android:id="@+id/deleteIcon"
                        tools:ignore="ContentDescription"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
                        app:layout_constraintStart_toStartOf="@+id/deleteButton"
                        app:layout_constraintTop_toBottomOf="@+id/detailButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>